# AIIO-Client

./: Cargo.toml  README.md
src/: GPT3.rs  main.rs  model.rs
src/models/: GPT3.rs  mod.rs  openai.rs
